trying to resize some stuff

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 			<div id="content" layout="row">
 				<!-- Topic Nav Bar -->
-				<div flex id="topic-sidebar">
+				<div id="topic-sidebar">
 					<md-list layout="column">
 						<md-list-item>
 							<md-autocomplete 
